--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PUERTO=3015 # Puerto que utilizamos para visualizar la web
 MENSAJE="Escuchando en..." # Mensaje que se visualiza en la consola cuando se enciende el servidor
+MONGODB_CONSTRING = ""
+MYSQL_HOST = "127.0.0.1"
+MYSQL_USER = "root"
+MYSQL_PASS = ""
+MYSQL_DATABASE = ""
+MYSQL_PORT = 3306
