--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PUERTO=3015 # Puerto que utilizamos para visualizar la web
+PUERTO=3033 # Puerto que utilizamos para visualizar la web
 MENSAJE="Escuchando en..." # Mensaje que se visualiza en la consola cuando se enciende el servidor
-MONGODB_CONSTRING = ""
+MONGODB_CONSTRING = "mongodb://127.0.0.1:27017/jpt_db"
 MYSQL_HOST = "127.0.0.1"
 MYSQL_USER = "root"
 MYSQL_PASS = ""
-MYSQL_DATABASE = ""
+MYSQL_DATABASE = "jtp_db"
 MYSQL_PORT = 3306
