--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.8.3",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
 }
