se han terminado los modelos, controladores y rutas de company y de inscription

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PUERTO=3033 # Puerto que utilizamos para visualizar la web
 MENSAJE="Escuchando en..." # Mensaje que se visualiza en la consola cuando se enciende el servidor
 API="v1"
-MONGODB_CONSTRING = "mongodb://127.0.0.1:27017/jpt_db"
+MONGODB_CONSTRING = "mongodb://127.0.0.1:27017/jtp_db"
 MYSQL_HOST = "127.0.0.1"
 MYSQL_USER = "root"
 MYSQL_PASS = ""
