--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PUERTO=3033 # Puerto que utilizamos para visualizar la web
 MENSAJE="Escuchando en..." # Mensaje que se visualiza en la consola cuando se enciende el servidor
-API="v1"
-MONGODB_CONSTRING = "mongodb://127.0.0.1:27017/jtp_db"
-MYSQL_HOST = "127.0.0.1"
-MYSQL_USER = "root"
-MYSQL_PASS = ""
-MYSQL_DATABASE = "jtp_db"
-MYSQL_PORT = 3306
+API="v1" # Version del API
+MONGODB_CONSTRING = "mongodb://127.0.0.1:27017/jtp_db" # Base de datos de Mongo
+MYSQL_HOST = "127.0.0.1" # ip del host MySQL
+MYSQL_USER = "root" # Usuario MySQL
+MYSQL_PASS = "" 
+MYSQL_DATABASE = "jtp_db" # Base de datos usada en MySQL
+MYSQL_PORT = 3306 # Puerto de MySQL
