--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.8.3",
     "mysql": "^2.18.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
