--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MYSQL_USER = "root" # Usuario MySQL
 MYSQL_PASS = "" 
 MYSQL_DATABASE = "jtp_db" # Base de datos usada en MySQL
 MYSQL_PORT = 3306 # Puerto de MySQL
+LOGS_FOLDER = "./tmp/"
