--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "log4js": "^6.9.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.8.3",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
