Hecho la estructura de archivos (vacios)

--- a/.env
+++ b/.env
@@ -7,4 +7,6 @@ MYSQL_USER = "root" # Usuario MySQL
 MYSQL_PASS = "" 
 MYSQL_DATABASE = "jtp_db" # Base de datos usada en MySQL
 MYSQL_PORT = 3306 # Puerto de MySQL
-LOGS_FOLDER = "./tmp/"
+LOGS_FOLDER = "./tmp/" # Carpeta para logs
+SESSION_SECRET = "bW9yZW5pdG82OTptb3Jlbml0bzY5" # Session secret
+SECRET_JWT = "bW8yZW4pdG81OTptb3Jlbml0bzY5" # Session JTW
